--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -68,6 +68,8 @@
                 <span id = "ForgotPassword">
                     <a href = "#">Ai uitat parola?</a>
                 </span>
+
+                <a href = "SignUp.html" class = "ButtonLink">Nu ai cont? Inregistreaza-te</a>
             </div>
         </form>
     </div>
