--- a/Frontend/PersonalityForm.html
+++ b/Frontend/PersonalityForm.html
@@ -113,11 +113,11 @@
             </div>
             
             <div class = "row">
-                <h3 id = "InputLabel">Care este username-ul tau de Spotify? (vezi: <a target="_blank" rel="noopener noreferrer" href = "https://www.businessinsider.com/how-to-find-spotify-username">cum sa gasesti username-ul</a>)</h3>
-                <input type = "text" placeholder = "Username Spotify" name = "Username" id = "PersonalityTextInput" required>
+                <h3 id = "InputLabel"><a target="_blank" rel="noopener noreferrer" href = "https://accounts.spotify.com/en/login?continue=https:%2F%2Faccounts.spotify.com%2Fauthorize%3Fscope%3Duser-top-read%26response_type%3Dcode%26redirect_uri%3Dhttps%253A%252F%252Fdexter0-0.github.io%252F%26client_id%3Df33ea24085634624b58c3622dedf563c">Logheaza-te cu contul de Spotify</a> si introdu linkul la care ai fost redirectionat</h3>
+                <input type = "text" placeholder = "Linkul la care ai fost redirectionat" name = "PersonalityType" id = "PersonalityTextInput" required>
 
                 <h3 id = "InputLabel">Care este username-ul tau de Instagram?</h3>
-                <input type = "text" placeholder = "Username Instagram" name = "Username" id = "PersonalityTextInput" required>
+                <input type = "text" placeholder = "Username Instagram" name = "SpotifyLink" id = "PersonalityTextInput" required>
 
                 <h3 id = "InputLabel">Introdu 5 filme si seriale care iti plac (unul pe linie)</h3>
                 <textarea name = "FilmeSeriale" cols = "40" rows = "5" id = "PersonalityTextInput" required></textarea>
