--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -28,7 +28,7 @@
     <meta http-equiv = "Cache-Control" content = "cache">
     
     <!-- Title and Icon -->
-    <title>PersMatch</title>
+    <title>PersMatch - Login</title>
     <link rel = "icon" type = "image/png" href = "Images/Icon.png">
     
     <!-- Include Bootsrap -->
