--- a/Frontend/PersonalityForm.html
+++ b/Frontend/PersonalityForm.html
@@ -49,28 +49,7 @@
      <script src = "script.js"></script>
 
     <!-- Pop up script -->
-    <script type='text/javascript'>
-        $(function()
-        {
-            var overlay = $('<div id="overlay"></div>');
-            overlay.show();
-            overlay.appendTo(document.body);
-            $('.popup').show();
-            $('.close').click(function()
-            {
-                $('.popup').hide();
-                overlay.appendTo(document.body).remove();
-                return false;
-            });
-     
-            $('.x').click(function()
-            {
-                $('.popup').hide();
-                overlay.appendTo(document.body).remove();
-                return false;
-            });
-        });
-     </script>
+    <script src = "PopUpScript.js"></script>
 
     <!-- Pop up -->
      <div class = 'popup'>
