--- a/Frontend/HomePage.html
+++ b/Frontend/HomePage.html
@@ -28,7 +28,7 @@
      <meta http-equiv = "Cache-Control" content = "cache">
      
      <!-- Title and Icon -->
-     <title>PersMatch - Login</title>
+     <title>PersMatch - HomePage</title>
      <link rel = "icon" type = "image/png" href = "Images/Icon.png">
      
      <!-- Include Bootsrap -->
