--- a/Frontend/HomePage.html
+++ b/Frontend/HomePage.html
@@ -58,12 +58,12 @@
         <img class = "ProfileImage" src = "Images/Icon.png" style = "width:100%;">
         <h1 id = "Username"></h1>
         <p class = "ProfileTitle" id = "Age"></p>
-        <a class = "ProfileInstagramLink" id = "Instagram" href = "#LinkInstagram"></a>
+        <a class = "ProfileInstagramLink" id = "Instagram"></a>
     </div>
 
     <!-- Match / Matching Button -->
     <div class = "container">
-        <a href = "Chat.html" class = "ButtonLink" id = "MatchingButton">Match / Matching</a>
+        <a class = "ButtonLink" id = "MatchingButton">Match / Matching</a>
     </div>
 
     
